Fixed a bug that keeps the Publish button visible after publishing

--- a/public/editor/stylesheets/publish.less
+++ b/public/editor/stylesheets/publish.less
@@ -123,6 +123,10 @@
     justify-content: flex-end;
     align-items: flex-start;
 
+    &.hide {
+      display: none;
+    }
+
     #publish-button-publish {
       margin-left: 10px;
       .publish-button;
